--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "protobuf": "https://github.com/gregor/protobuf.js.git#32ada41d3c963bd5f43d7cdadced2d6d2ccd082a",
     "raygun4js": "https://github.com/MindscapeHQ/raygun4js.git#2.5.3",
     "speakingurl": "https://github.com/wireapp/speakingurl.git#2638eaf5e267d476b918f5a817a627ddf56255c1",
+    "sw-toolbox": "^3.6.1",
     "twitter-text": "https://github.com/twitter/twitter-text.git#1.14.2",
     "uint32": "https://github.com/fxa/uint32.js.git#0.2.1",
     "underscore": "https://github.com/jashkenas/underscore.git#1.8.3",
@@ -122,6 +123,9 @@
     },
     "speakingurl": {
       "js": "speakingurl.min.js"
+    },
+    "sw-toolbox": {
+      "js": "sw-toolbox.js"
     },
     "twitter-text": {
       "js": "js/twitter-text.js"
